RESOLVED FIXED39768
[Qt] PlatformScreenQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39768
Summary [Qt] PlatformScreenQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:31:13 PDT
WebCore/platform/qt/PlatformScreenQt.cpp:39: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 1 files
Attachments
Patch that fixes the coding style issues (2.78 KB, patch)
2010-05-26 14:37 PDT, Anders Bakken
no flags
Patch (2.95 KB, patch)
2010-06-04 18:49 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:37:37 PDT
Created attachment 57148 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:45:55 PDT
QtTriaged
David Levin
Comment 3 2010-05-27 11:18:00 PDT
Comment on attachment 57148 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 18:49:22 PDT
Eric Seidel (no email)
Comment 5 2010-06-04 22:03:58 PDT
Comment on attachment 57943 [details] Patch Its sad that we have this code repeated twice.
WebKit Commit Bot
Comment 6 2010-06-05 02:00:31 PDT
Comment on attachment 57943 [details] Patch Clearing flags on attachment: 57943 Committed r60743: <http://trac.webkit.org/changeset/60743>
WebKit Commit Bot
Comment 7 2010-06-05 02:00:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.