third_party/WebKit/WebCore/platform/qt/PlatformMouseEventQt.cpp
@@ -29,10 +29,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "PlatformMouseEvent.h"
 
-#include <wtf/CurrentTime.h>
-
-#include <QMouseEvent>
 #include <QGraphicsSceneMouseEvent>
+#include <QMouseEvent>
+#include <wtf/CurrentTime.h>
 
 namespace WebCore {
 
@@ -66,10 +65,10 @@ PlatformMouseEvent::PlatformMouseEvent(QGraphicsSceneMouseEvent* event, int clic
         m_button = NoButton;
 
     m_clickCount = clickCount;
-    m_shiftKey =  (event->modifiers() & Qt::ShiftModifier) != 0;
-    m_ctrlKey = (event->modifiers() & Qt::ControlModifier) != 0;
-    m_altKey =  (event->modifiers() & Qt::AltModifier) != 0;
-    m_metaKey = (event->modifiers() & Qt::MetaModifier) != 0;
+    m_shiftKey =  (event->modifiers() & Qt::ShiftModifier);
+    m_ctrlKey = (event->modifiers() & Qt::ControlModifier);
+    m_altKey =  (event->modifiers() & Qt::AltModifier);
+    m_metaKey = (event->modifiers() & Qt::MetaModifier);
 }
 
 PlatformMouseEvent::PlatformMouseEvent(QInputEvent* event, int clickCount)
@@ -95,7 +94,7 @@ PlatformMouseEvent::PlatformMouseEvent(QInputEvent* event, int clickCount)
 #ifndef QT_NO_CONTEXTMENU
     case QEvent::ContextMenu: {
         m_eventType = MouseEventPressed;
-        QContextMenuEvent *ce = static_cast<QContextMenuEvent *>(event);
+        QContextMenuEvent* ce = static_cast<QContextMenuEvent*>(event);
         m_position = IntPoint(ce->pos());
         m_globalPosition = IntPoint(ce->globalPos());
         m_button = RightButton;
@@ -121,10 +120,10 @@ PlatformMouseEvent::PlatformMouseEvent(QInputEvent* event, int clickCount)
     }
 
     m_clickCount = clickCount;
-    m_shiftKey =  (event->modifiers() & Qt::ShiftModifier) != 0;
-    m_ctrlKey = (event->modifiers() & Qt::ControlModifier) != 0;
-    m_altKey =  (event->modifiers() & Qt::AltModifier) != 0;
-    m_metaKey = (event->modifiers() & Qt::MetaModifier) != 0;
+    m_shiftKey =  (event->modifiers() & Qt::ShiftModifier);
+    m_ctrlKey = (event->modifiers() & Qt::ControlModifier);
+    m_altKey =  (event->modifiers() & Qt::AltModifier);
+    m_metaKey = (event->modifiers() & Qt::MetaModifier);
 }
 
 }
